--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "startdev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
